--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=say123
 
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL5Dialect
-spring.jpa.hibernate.ddl-auto=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
